--- a/sms.html
+++ b/sms.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Automatic SMS by Ram 🚀</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ✅ Added line -->
   <style>
     body {
       font-family: Arial, sans-serif;
